<resources>
    <string name="app_name">Kaipos</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_title_error">Oops!</string>
    <string name="dialog_message_error">There was an error, try again.</string>
    <string name="dialog_ok_button">OK</string>
    <string name="network_unavailable_message">Network is unavailable</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled in your settings.</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="no_data_forecast_data">There is no data to display</string>
    <string name="icon_image_description">Icon Image</string>
    <string name="circle_image_description">Circle Image</string>
    <string name="this_week_weather_label">This Week\'s Weather</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
    <string name="day_tomorrow">Tomorrow</string>
    <string name="day_today">Today</string>
    <string name="hourly_textView_label">24 Hour Weather</string>
    <string name="hourly__label">Hourly</string>
    <string name="weekly_label">Weekly</string>
    <string name="double_dash_placeholder">--</string>
    <string name="dots_placeholder">...</string>
    <string name="refresh_button">Refresh button</string>
    <string name="weather_logo_icon">Weather logo icon</string>
    <string name="temperature_symbol">Temperature symbol</string>
    <string name="loading">Loading</string>
    <string name="getting_current_weather">Getting current weather...</string>
    <string name="rain_snow">RAIN/SNOW?</string>
    <string name="humidity">HUMIDITY</string>
    <string name="dark_sky">Powered by Dark Sky</string>
</resources>
